src/App.css
#root {
  background: radial-gradient(
    circle,
    rgb(120, 119, 119) 0%,
    rgb(36, 36, 72) 45%,
    rgba(0, 0, 0, 1) 100%
  );
  margin: 0;
  padding: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  box-sizing: border-box;
}
.error {
  position: absolute;
  top: 30px;
  right: 30px;
  z-index: 999;
  width: max-content;
  height: max-content;
  background: rgba(255, 0, 0, 0.585);
  padding: 1rem 2rem;
  border-radius: 15px;
  color: white;
  transition: opacity 0.5s ease;
  opacity: 1;
}

.error.hidden {
  opacity: 0;
  pointer-events: none;
}

.container {
  position: relative;
  min-width: 32svw;
  min-height: 75svh;
  background: transparent;
  backdrop-filter: blur(3px);
  border: 1px solid rgba(255, 255, 255, 0.22);
  border-radius: 8px;
  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
  padding-top: 50px;
  padding-bottom: 1rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.clip-pin {
  position: absolute;
  background-color: #00ccaa;
  border-radius: 50%;
  width: 20px;
  height: 20px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
  z-index: 10;
}
.sheet > .clip-pin:nth-child(1) {
  top: 5px;
  left: 5px;
}

.sheet > .clip-pin:nth-child(2) {
  top: 5px;
  right: 5px;
}

.sheet > .clip-pin:nth-child(3) {
  bottom: 5px;
  left: 5px;
}

.sheet > .clip-pin:nth-child(4) {
  bottom: 5px;
  right: 5px;
}
.clip-top {
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  width: 80px;
  height: 40px;
  background-color: #b0bec5;
  border-radius: 5px 5px 15px 15px;
  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
  z-index: 10;
}
.clip-top::before {
  content: "";
  position: absolute;
  top: 5px;
  left: 50%;
  transform: translateX(-50%);
  width: 20px;
  height: 10px;
  background-color: #78909c;
  border-radius: 3px;
}

.sheet {
  position: relative;
  background: #fff;
  width: 95%;
  height: max-content;
  min-height: inherit;
  background-image: linear-gradient(to bottom, #cfd8dc 1px, transparent 1px);
  background-size: 100% 40px;
}

.cont-form {
  margin: auto;
  width: 70%;
  padding: 1rem;
  display: flex;
  justify-content: center;
  form {
    width: 100%;
    text-align: center;
    justify-content: center;
    align-items: center;
    display: flex;
  }
  input {
    border: none;
    border-bottom: 1px dashed rgb(231, 231, 231);
    width: 75%;
    height: 2.5rem;
    padding: 0.5rem;
  }
  button {
    border: none;
    border-bottom: 1px dashed rgb(231, 231, 231);

    background: #fff;
    cursor: pointer;
    width: 2.5rem;
    height: 2.5rem;
    transition: 0.3s all;
  }
  button:hover {
    background: #e9e9e9;
  }
}

.cont-tasks {
  width: 100%;
  ul {
    text-wrap: wrap;
    list-style: none;
  }
  li {
    position: relative;
    display: flex;
    text-transform: uppercase;
    justify-content: space-between; /* separa el texto del botón */
    align-items: center;
    padding: 0.6rem 2rem;
    cursor: pointer;
    background-color: rgba(238, 240, 240, 0.802);
    margin: 0.2rem 1rem;
  }

  .done {
    text-decoration: line-through;
    color: #78909c91;
  }
  button {
    cursor: pointer;
    background-color: #ff4d4d; /* Rojo */
    color: white;
    border: none;
    border-radius: 5px;
    padding: 5px 10px;
    line-height: 1;
    transition: background-color 0.2s;

    &:hover {
      background-color: #cc0000;
    }
  }
}
.cont-tasks ul {
  list-style-position: inside; /* hace que el bullet aparezca dentro del li */
  padding-left: 0; /* opcional, para evitar demasiado espacio a la izquierda */
}

li .date {
  font-size: clamp(0.5rem, -0.125rem + 2vw, 1rem);
  color: #666;
  margin-right: 10px;
}

